# remo

./: .ecr-env.example  .env.example  .gitignore  README.md  pyproject.toml  tasks.py
docker/lambda/: Dockerfile
remo/: __main__.py  handler.py  remo.py  slack.py  spreadsheet.py  utils.py
