[tool.poetry]
name = "remo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "remo" }]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.26.25"
gspread = "^5.7.2"
oauth2client = "^4.1.3"
requests = "^2.28.1"
structlog = "^22.3.0"

[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
invoke = "^1.7.3"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110
target-version = ["py310"]

[tool.isort]
include_trailing_comma = true
line_length = 110
multi_line_output = 3
